--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -31,27 +31,27 @@
         <div class="row">
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="images/icons/icon1.jpg" class="img-fluid" alt="" data-aos="zoom-in">
+            <img src="images/icons/Abacus_Eva_1.jpg" class="img-fluid" alt="" data-aos="zoom-in">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="images/icons/icon2.jpg" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="100">
+            <img src="images/icons/Abacus_Eva_2.jpg" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="100">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="images/icons/icon3.jpg" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="200">
+            <img src="images/icons/Abacus_Eva_3.jpg" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="200">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="images/icons/icon4.jpg" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="300">
+            <img src="images/icons/Abacus_Eva_4.jpg" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="300">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="images/icons/icon5.jpg" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="400">
+            <img src="images/icons/Abacus_Eva_5.jpg" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="400">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="images/icons/icon6.jpg" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="500">
+            <img src="images/icons/Abacus_Eva_6.jpg" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="500">
           </div>
 
         </div>
@@ -70,20 +70,19 @@
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Shenmo is dedicated to enlighten children’s nature and develop their spiritual wisdom. With importance attached to moral education, joyful learning, attention and focus training. 
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+              <li><i class="ri-check-double-line"></i> Mental Shenmo Europe
+ Memory Training</li>
+              <li><i class="ri-check-double-line"></i> Shenmo Europe
+ Attention Training</li>
+              <li><i class="ri-check-double-line"></i> Shenmo Europe Languge Training</li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+              SHENMO EDUCATION was established in 1998 and is headquartered in Beijing, China. Shenmo is committed to providing quality trainings for children around the world. In 20 years of development, people who benefit from Shenmo courses are all over the world.
             </p>
             <a href="#" class="btn-learn-more">Learn More</a>
           </div>
@@ -98,7 +97,7 @@
 
         <div class="row">
           <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-xl-start" data-aos="fade-right" data-aos-delay="150">
-            <img src="images/features/img3.png" alt="" class="img-fluid">
+            <img src="images/icons/Abacus_Spark_21.jpg" alt="" class="img-fluid">
           </div>
 
           <div class="col-xl-7 d-flex align-items-stretch pt-4 pt-xl-0" data-aos="fade-left" data-aos-delay="300">
@@ -155,33 +154,33 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <div><img src="images/courses/russia.png" height="40px;" alt="" style="margin-bottom: 1rem;"></div>
               <h4 class="title"><a href="">Russian</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <p class="description">This is a largely used language and is the language of many great writers, such as Pushkin and Tolstoy. Russia, being the (geographically) largest country in the world, </p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div><img src="images/courses/united-kingdom.png" height="40px;" alt="" style="margin-bottom: 1rem;"></div>
               <h4 class="title"><a href="">English</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <p class="description">English This is a global language and is becoming increasingly becoming a necessity to be able to reach different people and spread our messages through the world.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div><img src="images/courses/netherlands.png" height="40px;" alt="" style="margin-bottom: 1rem;"></div>
               <h4 class="title"><a href="">Dutch</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <p class="description">This is a largely used language and is the language of many great writers, such as Pushkin and Tolstoy. Russia, being the (geographically) largest country in the world, </p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">Math</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <div><img src="images/courses/china.png" height="40px;" alt="" style="margin-bottom: 1rem;"></div>
+              <h4 class="title"><a href="">Chinese</a></h4>
+              <p class="description">This is the language of tomorrow and is fast becoming an asset in the world of business and commerce, along with being spoken by people all around the world.</p>
             </div>
           </div>
 
@@ -502,10 +501,10 @@
 
         <div class="row">
 
-          <div class="col-lg-4 col-md-6">
-            <div class="box" data-aos="zoom-in-right" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6" >
+            <div class="box" style="border: 1px solid #00c2fa"  data-aos="zoom-in-right" data-aos-delay="200">
               <h3>Free</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
+              <h4><sup> &euro;</sup>0<span> / month</span></h4>
               <ul>
                 <li>Aida dere</li>
                 <li>Nec feugiat nisl</li>
@@ -519,10 +518,10 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
-            <div class="box recommended" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 mt-4 mt-md-0" >
+            <div class="box recommended" style="border: 1px solid #3fc178" data-aos="zoom-in" data-aos-delay="100">
               <h3>Business</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+              <h4><sup> &euro;</sup>19<span> / month</span></h4>
               <ul>
                 <li>Aida dere</li>
                 <li>Nec feugiat nisl</li>
@@ -537,9 +536,9 @@
           </div>
 
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
-            <div class="box" data-aos="zoom-in-left" data-aos-delay="200">
+            <div class="box" data-aos="zoom-in-left" style="border: 1px solid #ffce34" data-aos-delay="200">
               <h3>Developer</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
+              <h4><sup> &euro;</sup>29<span> / month</span></h4>
               <ul>
                 <li>Aida dere</li>
                 <li>Nec feugiat nisl</li>
@@ -641,7 +640,8 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="contact-about">
-              <h3>Abacus</h3>
+              <h3>Shenmo Europe
+</h3>
               <p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
               <div class="social-links">
                 <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
@@ -712,7 +712,8 @@
       <div class="row d-flex align-items-center">
         <div class="col-lg-6 text-lg-left text-center">
           <div class="copyright">
-            &copy; Copyright <strong>Abacus</strong>. All Rights Reserved
+            &copy; Copyright <strong>Shenmo Europe
+</strong>. All Rights Reserved
           </div>
           <div class="credits">
 
